--- a/src/app/pages/process-intelligence/d3flowchart/d3flowchart.component.css
+++ b/src/app/pages/process-intelligence/d3flowchart/d3flowchart.component.css
@@ -31,7 +31,7 @@
 .search-node{
     position: absolute;
     top: -34px;
-    left: 19%;    
+    left: 18%;    
     z-index: 1;
 }
 .search-node span{
