--- a/src/app/pages/rpautomation/rpa-database-connections/rpa-database-connections.component.css
+++ b/src/app/pages/rpautomation/rpa-database-connections/rpa-database-connections.component.css
@@ -36,9 +36,9 @@
   }
 
   .env-btn > button > img{
-    color:black !important;
+    /* color:black !important;
     width:25px;
-    background-color: white !important;
+    background-color: white !important; */
   }
 
   .rpa-modal-content{
@@ -96,8 +96,8 @@
 } */
 
 .env-btn{
-  margin-left: 5px !important;
-  margin-right: 5px !important;
+  /* margin-left: 5px !important;
+  margin-right: 5px !important; */
 } 
 
 
@@ -121,7 +121,7 @@
 }
 .credential-btntool {
   position: relative;
-  padding: 3px 3px;
+  padding: 6px;
   margin: 0px !important;
 }
 button:disabled {
